Improve scope and id management