@@ -26,14 +26,17 @@ public final class FlowRunner {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(FlowRunner.class);
 
-    private final FlowBuilder flowBuilder;
-    private final LinkedHashMap<String, ControllerConfiguration<?, ?>> configurations = new LinkedHashMap<>();
-    private final LinkedHashMap<String, Controller<?, ?>> controllers = new LinkedHashMap<>();
+    private final LinkedHashMap<Id, ControllerConfiguration<?, ?>> configurations = new LinkedHashMap<>();
+    private final LinkedHashMap<Id, Controller<?, ?>> controllers = new LinkedHashMap<>();
     private final Phaser phaser = new Phaser();
     private final AtomicBoolean stopping = new AtomicBoolean();
 
+    private final FlowBuilder flowBuilder;
+    private final IdFactory idFactory;
+
     public FlowRunner(FlowBuilder flowBuilder) {
         this.flowBuilder = flowBuilder;
+        this.idFactory = flowBuilder.getIdFactory();
     }
 
     public String render() {
@@ -48,8 +51,10 @@ public final class FlowRunner {
 
         List<Node> nodes = flowBuilder.nodes.entrySet().stream()
                 .map(entry -> SimpleNode.of(
-                        entry.getKey(),
-                        Stream.concat(entry.getValue().getLinks().values().stream(), entry.getValue().getExcepts().stream()).collect(Collectors.toList())))
+                        entry.getKey().toString(),
+                        Stream.concat(entry.getValue().getLinks().values().stream(), entry.getValue().getExcepts().stream())
+                                .map(s -> s.substring(1))  // remove leading scope delimiter, TODO
+                                .collect(Collectors.toList())))
                 .collect(Collectors.toList());
 
         return new GraphTxt(nodes).getText();
@@ -83,7 +88,7 @@ public final class FlowRunner {
         phaser.awaitAdvance(0);
 
         if (!stopping.getAndSet(true)) {
-            Controller<?, ?> seedController = controllers.get("__seed__");
+            Controller<?, ?> seedController = controllers.get(Id.SEED);
             Stream.of(List.of(seedController), seedController.links.values())
                     .flatMap(Collection::stream)
                     .map(c -> c.workers)
@@ -108,14 +113,17 @@ public final class FlowRunner {
 
         flowBuilder.nodes.forEach((id, node) -> {
 
-            ControllerConfiguration<I, O> configuration = new ControllerConfiguration<>(new ControllerConfigurationInterface());
+            @SuppressWarnings("unchecked")
+            ControllerConfiguration<I, O> configuration = new ControllerConfiguration<>(
+                    id,
+                    (Transformer<I, O>) node.requireTransformer(),
+                    new ControllerConfigurationInterface()
+            );
 
             configuration
-                    .id(id)
-                    .transformer((Transformer<I, O>) node.requireTransformer())
-                    .links(node.getLinks())
-                    .syncs(node.getSyncs())
-                    .excepts(node.getExcepts());
+                    .links(node.getLinks(), idFactory)
+                    .syncs(node.getSyncs(), idFactory)
+                    .excepts(node.getExcepts(), idFactory);
 
             node.getMaxWorkers().ifPresent(configuration::maxWorkers);
             node.getMaxQueueSize().ifPresent(configuration::maxQueueSize);
@@ -128,7 +136,7 @@ public final class FlowRunner {
 
         if (configurations.values().stream().noneMatch(ControllerConfiguration::getReport)) {
             configurations.values().stream()
-                    .filter(c -> !c.getId().startsWith("__"))
+                    .filter(c -> !c.getId().getLocalId().startsWith("$__"))
                     .filter(c -> c.getLinks().isEmpty())
                     .forEach(c -> c.report(true));
         }
@@ -136,61 +144,61 @@ public final class FlowRunner {
 
     private void setupElog() {
         for (ControllerConfiguration<?, ?> catcher : configurations.values()) {
-            for (String handlerId : catcher.getExcepts()) {
+            for (Id handlerId : catcher.getExcepts()) {
                 ControllerConfiguration<?, ?> handler = configurations.get(handlerId);
                 if (handler == null) throw new IllegalStateException(catcher.getId() + " excepts to " + handlerId + " which does not exist");
-                if (!handlerId.equals("__elog__") && handler.getExcepts().isEmpty()) handler.excepts(List.of("__elog__"));
+                if (handlerId != Id.ELOG && handler.getExcepts().isEmpty()) handler.excepts(List.of(Id.ELOG));
             }
         }
     }
 
     private void setupSeed() {
-        List<String> noIncoming = new ArrayList<>(configurations.keySet());
-        noIncoming.remove("__seed__");
+        List<Id> noIncoming = new ArrayList<>(configurations.keySet());
+        noIncoming.remove(Id.SEED);
         configurations.values().stream()
                 .flatMap(c -> Stream.concat(c.getLinks().values().stream(), c.getExcepts().stream()))
                 .forEach(noIncoming::remove);
-        ControllerConfiguration<?, ?> seedConfiguration = configurations.get("__seed__");
-        List<String> seedLinks = new ArrayList<>(seedConfiguration.getLinks().values());
+        ControllerConfiguration<?, ?> seedConfiguration = configurations.get(Id.SEED);
+        List<Id> seedLinks = new ArrayList<>(seedConfiguration.getLinks().values());
         seedLinks.addAll(noIncoming.isEmpty() ? configurations.keySet() : noIncoming);  // link seed with everything if noIncoming is empty for circular route detection
-        seedLinks.remove("__seed__");
+        seedLinks.remove(Id.SEED);
         seedConfiguration.links(seedLinks);
-        flowBuilder.nodes.get("__seed__").setLinks(seedLinks);
+        flowBuilder.getNode(Id.SEED).setLinks(seedLinks.stream().map(Id::getGlobalId).collect(Collectors.toList()));
     }
 
     private void explore() {
-        Set<String> seen = new HashSet<>();
-        explore("__seed__", "__seed__", new ArrayDeque<>(), false, seen);
-        configurations.keySet().stream().filter(id -> !seen.contains(id)).forEach(id -> explore(id, id, new ArrayDeque<>(), false, new HashSet<>()));
+        Set<Id> seen = new HashSet<>();
+        explore(Id.SEED.getLocalId(), Id.SEED, new ArrayDeque<>(), false, seen);
+        configurations.keySet().stream().filter(id -> !seen.contains(id)).forEach(id -> explore(id.toString(), id, new ArrayDeque<>(), false, new HashSet<>()));
     }
 
-    private void explore(String nextName, String nextId, ArrayDeque<String> route, boolean maybeBridge, Set<String> seen) {
+    private void explore(String nextName, Id nextId, ArrayDeque<Id> route, boolean maybeBridge, Set<Id> seen) {
         seen.add(nextId);
         if (route.contains(nextId)) {
-            Iterator<String> iterator = route.iterator();
+            Iterator<Id> iterator = route.iterator();
             while (!iterator.next().equals(nextId)) iterator.remove();
-            throw new IllegalStateException("Circular route detected: " + String.join(" -> ", route) + " -> " + nextId);
+            throw new IllegalStateException("Circular route detected: " + route.stream().map(Id::toString).collect(Collectors.joining(" -> ")) + " -> " + nextId);
         } else {
             if (!configurations.containsKey(nextId)) throw new IllegalStateException(route.getLast() + " links to " + nextId + " which does not exist");
             if (maybeBridge) maybeBridge(route.getLast(), nextName, nextId);
             route.add(nextId);
             configurations.get(nextId).getLinks().forEach((name, id) -> explore(name, id, new ArrayDeque<>(route), true, seen));
-            Iterator<String> iterator = route.descendingIterator();
+            Iterator<Id> iterator = route.descendingIterator();
             while (iterator.hasNext()) {
-                String id = iterator.next();
+                Id id = iterator.next();
                 boolean isExceptionHandler = configurations.values().stream().anyMatch(c -> c.getExcepts().contains(id));
                 if (isExceptionHandler) break;  // TODO this only works as long as a controller is not used as both a normal link and an exception handler
                 ControllerConfiguration<?, ?> controller = configurations.get(id);
                 if (!controller.getExcepts().isEmpty()) {
-                    for (String exceptionHandler : controller.getExcepts()) {
-                        explore(exceptionHandler, exceptionHandler, new ArrayDeque<>(route), false, seen);
+                    for (Id exceptionHandler : controller.getExcepts()) {
+                        explore(exceptionHandler.toString(), exceptionHandler, new ArrayDeque<>(route), false, seen);
                     }
                 }
             }
         }
     }
 
-    private <I, O> void maybeBridge(String upstreamId, String linkName, String downstreamId) {
+    private <I, O> void maybeBridge(Id upstreamId, String linkName, Id downstreamId) {
 
         ControllerConfiguration<?, ?> upstream = configurations.get(upstreamId);
         ControllerConfiguration<?, ?> downstream = configurations.get(downstreamId);
@@ -210,17 +218,19 @@ public final class FlowRunner {
                 ControllerConfiguration<?, ?> pointer = upstream;
                 for (Class<? extends Transformer<?, ?>> transformerClass : bridge) {
 
+                    @SuppressWarnings("unchecked")
                     Transformer<I, O> transformer = TransformerFactory.instance((Class<? extends Transformer<I, O>>) transformerClass, null);
 
-                    String id = flowBuilder
-                            .splice(transformer, pointer.getId(), linkName)
+                    Id id = flowBuilder
+                            .splice(transformer, pointer.getId().getGlobalId(), linkName)
                             .getLastId();
 
                     // TODO converge with similar code in configure()
-                    ControllerConfiguration<I, O> configuration = new ControllerConfiguration<I, O>(new ControllerConfigurationInterface())
-                            .id(id)
-                            .transformer(transformer)
-                            .links(Collections.singletonMap(linkName, downstreamId));
+                    ControllerConfiguration<I, O> configuration = new ControllerConfiguration<>(
+                            id,
+                            transformer,
+                            new ControllerConfigurationInterface()
+                    ).links(Map.of(linkName, downstreamId));
 
                     configurations.put(id, configuration);
                     pointer.updateLink(linkName, id);
@@ -245,6 +255,7 @@ public final class FlowRunner {
                             .filter(o -> o.getMaxWorkers().isPresent())
                             .filter(o -> o.getMaxWorkers().get() > 0)
                             .map(ControllerConfiguration::getId)
+                            .map(Id::toString)
                             .collect(Collectors.joining(", "));
                     if (!incompatible.isEmpty()) {
                         throw new IllegalStateException(id + " requires outgoing links to be sync, but " + incompatible + " are async (maxWorkers > 0)");
@@ -254,6 +265,7 @@ public final class FlowRunner {
                             .peek(o -> { if (o.getMaxWorkers().isEmpty()) o.maxWorkers(1); })
                             .filter(o -> o.getMaxWorkers().get() == 0)
                             .map(ControllerConfiguration::getId)
+                            .map(Id::toString)
                             .collect(Collectors.joining(", "));
                     if (!incompatible.isEmpty()) {
                         throw new IllegalStateException(id + " requires outgoing links to be async, but " + incompatible + " are sync (maxWorkers == 0)");
@@ -289,7 +301,8 @@ public final class FlowRunner {
             reporter.start();
         }
 
-        Controller<Object, Object> seedController = (Controller<Object, Object>) controllers.get("__seed__");
+        @SuppressWarnings("unchecked")
+        Controller<Object, Object> seedController = (Controller<Object, Object>) controllers.get(Id.SEED);
         Context seed = Context.newSeedContext(seedController);
         seedController.accept(new Batch<>(seed, "seed signal"));
         seedController.finish(null, seed);
@@ -303,16 +316,16 @@ public final class FlowRunner {
     }
 
     public class ControllerConfigurationInterface {
-        public LinkedHashMap<String, ControllerConfiguration<?, ?>> getControllers() {
+        public LinkedHashMap<Id, ControllerConfiguration<?, ?>> getControllers() {
             return configurations;
         }
     }
 
     public class ControllerInterface {
 
-        private final String controllerId;
+        private final Id controllerId;
 
-        private ControllerInterface(String controllerId) {
+        private ControllerInterface(Id controllerId) {
             this.controllerId = controllerId;
         }
 
@@ -324,7 +337,7 @@ public final class FlowRunner {
             return controllers.values();
         }
 
-        public Optional<Controller<?, ?>> getController(String id) {
+        public Optional<Controller<?, ?>> getController(Id id) {
             Controller<?, ?> controller = controllers.get(id);
             if (controller == null) throw new IllegalArgumentException("No controller has id " + id);
             return Optional.of(controller);
@@ -336,10 +349,6 @@ public final class FlowRunner {
 
         public boolean isExceptionHandler() {
             return configurations.values().stream().anyMatch(c -> c.getExcepts().contains(controllerId));
-        }
-
-        public boolean isStopping() {
-            return stopping.get();
         }
     }
 
